<resources>
    <string name="app_name">E-moto</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="non_hai_ancora_un_account_registrati">Non hai ancora un account? Registrati!</string>
    <string name="data_di_nascita">Data di nascita</string>
    <string name="registrati">Registrati</string>
    <string name="citt">Città</string>
    <string name="iscrizione_emoto">Iscrizione eMoto</string>
    <string name="home">home</string>
    <string name="areapersonale">areapersonale</string>
    <string name="immagine_della_moto">Immagine della moto</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZG9tbTk5IiwiYSI6ImNrcW5pZjBpbjBidGIyb28ycDhmcnBvazkifQ.UdrrXBWIK1c43R5mhlHUOA</string>
    <string name="gestisci_profilo">Gestisci Profilo</string>
    <string name="moto_richieste">Moto richieste</string>
    <string name="moto_personali_in_vendita">Moto personali in vendita</string>
    <string name="logout">Logout</string>
    <string name="vendi_moto">Vendi moto</string>
    <string name="modello">Modello</string>
    <string name="descrizione">Descrizione</string>
    <string name="prezzo">prezzo</string>
    <string name="scatta_foto">Scatta foto</string>

</resources>