<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include layout="@layout/topbar" />

    <Button
        android:id="@+id/vendi_moto"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:text="@string/vendi_moto"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/Offerte"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:text="Offerte"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/offered_moto"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:text="@string/moto_personali_in_vendita"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/logout"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:text="@string/logout"
        android:layout_gravity="center"
        android:backgroundTint="@color/red"
        />





</androidx.appcompat.widget.LinearLayoutCompat>