<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iscrizione_emoto"
        android:fontFamily="casual"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:textSize="40dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_signup"
            android:imeOptions="flagNoExtractUi"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_signup"
            android:inputType="textPassword"
            android:imeOptions="flagNoExtractUi"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/data_di_nascita"
        app:startIconDrawable="@drawable/ic_baseline_cake_24"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/birthday_signup"
            android:inputType="datetime"
            android:imeOptions="flagNoExtractUi"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/citt"
        app:startIconDrawable="@drawable/ic_baseline_location_city_24"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/city"
            android:imeOptions="flagNoExtractUi"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/registrati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/registrati"

        android:layout_gravity="center_horizontal"
        />




</androidx.appcompat.widget.LinearLayoutCompat>
