<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vendi nuova moto"
                android:fontFamily="casual"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"
                android:textSize="20dp"/>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/modello"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/modelloTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/modello_add"
                    android:imeOptions="flagNoExtractUi"/>
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descrizione"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/descrizioneTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/descrizione_add"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prezzo"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/prezzoTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/prezzo_add"
                    android:imeOptions="flagNoExtractUi"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/gps_button"
                android:text="Aggiungi luogo con GPS"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                app:icon="@drawable/ic_baseline_gps_fixed_24" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/take_pic"
                android:text="@string/scatta_foto"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                app:icon="@drawable/ic_baseline_add_a_photo_24"/>



            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:contentDescription="Immagine scattata"
                android:src="@drawable/ic_baseline_directions_bike_24_blue"
                android:background="#99cbff"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>




    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>